# AiAgentBuilder

./: .gitignore  CLAUDE.md  LICENSE  README.md
Brainstorm/: 1stSession.md  WeekByWeekPlan.md
Brainstorm/SaaS/: SaaS.md
GrowingOnX/: README.md
GrowingOnX/Week1/: Day1.md  Day2.md  Day3.md  Day4.md  Day5.md  Day6.md  Day7.md
GrowingOnX/Week2/: plan.md
apps/carousel-agent/: README.md  pyproject.toml  skill_integrity_baseline.json
apps/carousel-agent/carousel_agent/: __init__.py  __main__.py  carousel.default.yaml  cli.py  config.py  logging_setup.py  paths.py  skill_integrity.py  store.py
apps/carousel-agent/carousel_agent/pipeline/: __init__.py  collector.py  formatter.py  manager.py  persister.py  renderer.py  schemas.py  scorer.py  seeds.json  skills.py  writer.py
apps/carousel-agent/skills/amara-news-carousel/: SKILL.md
apps/carousel-agent/skills/amarolabs-news-carousel/: SKILL.md
apps/carousel-agent/skills/neuro-carousel-writer/: SKILL.md
apps/carousel-agent/tests/: test_cli.py  test_config.py  test_logging_setup.py  test_pipeline_e2e.py  test_smoke.py  test_store.py
specs/carousel-agent-builder/: cto-review-report.md  phase0_probe.py  requirements-analysis.md  specification.md  test-plan.md
